--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <title>Snake Game</title>
     <style>
       body {
@@ -11,24 +10,27 @@
         justify-content: center;
         align-items: center;
         margin: 0;
-        background-color: black;
+        background-color: white;
       }
 
       #game-board {
+        border-radius: 5px;
+        border: 1px solid #dfd;
         background-color: #ccc;
-        width: 100vmin;
-        height: 100vmin;
+        width: 500px;
+        height: 500px;
         display: grid;
         grid-template-rows: repeat(21, 1fr);
         grid-template-columns: repeat(21, 1fr);
       }
 
       .snake {
-        background-color: hsl(200, 100%, 50%);
+        background-color: #dfefef;
         border: 0.25vmin solid black;
       }
 
       .food {
+        border-radius: 50%;
         background-color: hsl(50, 100%, 50%);
         border: 0.25vmin solid black;
       }
