--- a/index.html
+++ b/index.html
@@ -2,42 +2,11 @@
 <html lang="en">
   <head>
     <title>Snake Game</title>
-    <style>
-      body {
-        height: 100vh;
-        width: 100vw;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-        background-color: white;
-      }
-
-      #game-board {
-        border-radius: 5px;
-        border: 1px solid #dfd;
-        background-color: #ccc;
-        width: 500px;
-        height: 500px;
-        display: grid;
-        grid-template-rows: repeat(21, 1fr);
-        grid-template-columns: repeat(21, 1fr);
-      }
-
-      .snake {
-        background-color: #dfefef;
-        border: 0.25vmin solid black;
-      }
-
-      .food {
-        border-radius: 50%;
-        background-color: hsl(50, 100%, 50%);
-        border: 0.25vmin solid black;
-      }
-    </style>
+    <link rel="stylesheet" href="./index.css" />
+    <style></style>
     <script src="./src/game.js" type="module"></script>
   </head>
   <body>
-    <div id="game-board"></div>
+    <div class="snake-board"></div>
   </body>
 </html>
